--- a/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
@@ -1,86 +1,86 @@
 "Skins"
 {
-	"Отнесено от вихъра"
+	"Windblown"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Дисциплина на спусъка"
+	"Trigger Discipline"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Осцилатор"
+	"Oscillator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Хеви метъл"
+	"Heavy Metal"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Бунище"
+	"Junk Yard"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
 	}
-	"ХОХО"
+	"XOXO"
 	{
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Блъскане по бутоните"
+	"Button Masher"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Кибер броня"
+	"Cyber Shell"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
 	}
-	"Текстура_за_разработка"
+	"dev_texture"
 	{
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"С.Е.И.В.С."
+	"O.S.I.P.R."
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"Жизнени цветове"
+	"In Living Color"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"Изменникът"
+	"The Traitor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Прозиращ полимер"
+	"Clear Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Хроматична аберация"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Хранителна верига"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"Орел змияр"
+	"Circaetus"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Плоча"
+	"Slate"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
