--- a/addons/sourcemod/configs/weapons/weapons_german.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_german.cfg
@@ -65,17 +65,17 @@
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Chromatische Aberration"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Nahrungskette"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"Schlangenadler"
+	"Circaetus"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
