--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -1,46 +1,46 @@
 "Skins"
 {
-	"随风"
+	"Windblown"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"后发制人"
+	"Trigger Discipline"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"动摇"
+	"Oscillator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"重金属摇滚"
+	"Heavy Metal"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"废物王"
+	"Junk Yard"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
 	}
-	"要抱抱"
+	"XOXO"
 	{
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"战争手柄"
+	"Button Masher"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"赛博先锋"
+	"Cyber Shell"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
 	}
-	"橙灰之名"
+	"dev_texture"
 	{
 		"index"		"1043"
 		"classes"	"weapon_negev;"
@@ -50,37 +50,37 @@
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"活色生香"
+	"In Living Color"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"倒吊人"
+	"The Traitor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"一目了然"
+	"Clear Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"迷人眼"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"爆裂食物链"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"短趾雕"
+	"Circaetus"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"墨岩"
+	"Slate"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
