--- a/addons/sourcemod/configs/weapons/weapons_spanish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_spanish.cfg
@@ -1,41 +1,41 @@
 "Skins"
 {
-	"Viento"
+	"Windblown"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Disciplina de gatillo"
+	"Trigger Discipline"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscilador"
+	"Oscillator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Metal pesado"
+	"Heavy Metal"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Carne de desguace"
+	"Junk Yard"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
 	}
-	"TQM"
+	"XOXO"
 	{
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Machacabotones"
+	"Button Masher"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Ciberescudo"
+	"Cyber Shell"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -45,32 +45,32 @@
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"R.P.R.V."
+	"O.S.I.P.R."
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"Colores vivos"
+	"In Living Color"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"El Traidor"
+	"The Traitor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Polímero transparente"
+	"Clear Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Aberración cromática"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Cadena alimenticia"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
@@ -80,7 +80,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Pizarra"
+	"Slate"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
