--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -1,16 +1,16 @@
 "Skins"
 {
-	"Karahindiba"
+	"Windblown"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Tetik Disiplini"
+	"Trigger Discipline"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Osilatör"
+	"Oscillator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
@@ -20,7 +20,7 @@
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Hurdalık"
+	"Junk Yard"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -30,12 +30,12 @@
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Buton Basıcı"
+	"Button Masher"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Siber Kabuk"
+	"Cyber Shell"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -45,42 +45,42 @@
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"SGGEET"
+	"O.S.I.P.R."
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"Renk Cümbüşü"
+	"In Living Color"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"Hain"
+	"The Traitor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Şeffaf Polimer"
+	"Clear Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Renk Sapmaları"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Besin Zinciri"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"Yılan Kartalı"
+	"Circaetus"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Simsiyah"
+	"Slate"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
@@ -2465,7 +2465,7 @@
 		"index"		"498"
 		"classes"	"weapon_mac10;"
 	}
-	"Altın Yılan"
+	"Altın Bobin"
 	{
 		"index"		"497"
 		"classes"	"weapon_m4a1_silencer;"
