--- a/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
@@ -1,21 +1,21 @@
 "Skins"
 {
-	"Sopro Eólico"
+	"Windblown"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Disciplina no Gatilho"
+	"Trigger Discipline"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Osciladora"
+	"Oscillator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Metal Pesado"
+	"Heavy Metal"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
@@ -25,52 +25,52 @@
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
 	}
-	"BJS"
+	"XOXO"
 	{
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Abotoada"
+	"Button Masher"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Proteção Cibernética"
+	"Cyber Shell"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
 	}
-	"dev_textura"
+	"dev_texture"
 	{
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"IPV-RP"
+	"O.S.I.P.R."
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"Ao Vivo e a Cores"
+	"In Living Color"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"Traíra"
+	"The Traitor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Polímero Transparente"
+	"Clear Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Aberração Cromática"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Cadeia Alimentar"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
@@ -80,7 +80,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Tons de Preto"
+	"Slate"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
