--- a/addons/sourcemod/configs/weapons/weapons_finnish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_finnish.cfg
@@ -1,26 +1,26 @@
 "Skins"
 {
-	"Tuulen viemää"
+	"Windblown"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Liipasinkuri"
+	"Trigger Discipline"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oskillaattori"
+	"Oscillator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy metal"
+	"Heavy Metal"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Romuläjä"
+	"Junk Yard"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -30,12 +30,12 @@
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Rämpyttäjä"
+	"Button Masher"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Kyberkilpi"
+	"Cyber Shell"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -50,37 +50,37 @@
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"Väreissä"
+	"In Living Color"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"Petturi"
+	"The Traitor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Lasipolymeeri"
+	"Clear Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Värivääristymä"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Ravintoketju"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
 	}
-	"Käärmekotka"
+	"Circaetus"
 	{
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Liuskemusta"
+	"Slate"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
