--- a/addons/sourcemod/configs/weapons/weapons_french.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_french.cfg
@@ -20,7 +20,7 @@
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Décharge"
+	"Junk Yard"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -35,7 +35,7 @@
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyberbouclier"
+	"Cyber Shell"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -60,17 +60,17 @@
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Polymère transparent"
+	"Clear Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Aberration chromatique"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Chaine alimentaire"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
@@ -80,7 +80,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Ardoise"
+	"Slate"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
