--- a/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
@@ -1,16 +1,16 @@
 "Skins"
 {
-	"Szélfútta"
+	"Windblown"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Tűzfegyelem"
+	"Trigger Discipline"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oszcillátor"
+	"Oscillator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
@@ -20,7 +20,7 @@
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Szeméttelep"
+	"Junk Yard"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -30,12 +30,12 @@
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Gombcsapkodó"
+	"Button Masher"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Kiberburok"
+	"Cyber Shell"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -45,32 +45,32 @@
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"Sz.F.I.P."
+	"O.S.I.P.R."
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"Élethű Színekkel"
+	"In Living Color"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"Az Áruló"
+	"The Traitor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Átlátszó Műanyag"
+	"Clear Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Kromatikus Aberráció"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Tápláléklánc"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
@@ -80,7 +80,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Pala"
+	"Slate"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
