--- a/addons/sourcemod/configs/weapons/weapons_polish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_polish.cfg
@@ -1,26 +1,26 @@
 "Skins"
 {
-	"Niesiony przez wiatr"
+	"Windblown"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Opanowanie spustu"
+	"Trigger Discipline"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscylator"
+	"Oscillator"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy metal"
+	"Heavy Metal"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
 	}
-	"Złomowisko"
+	"Junk Yard"
 	{
 		"index"		"1047"
 		"classes"	"weapon_revolver;"
@@ -30,12 +30,12 @@
 		"index"		"1046"
 		"classes"	"weapon_xm1014;"
 	}
-	"Mashowanie guzików"
+	"Button Masher"
 	{
 		"index"		"1045"
 		"classes"	"weapon_mac10;"
 	}
-	"Cyberpowłoka"
+	"Cyber Shell"
 	{
 		"index"		"1044"
 		"classes"	"weapon_p250;"
@@ -45,32 +45,32 @@
 		"index"		"1043"
 		"classes"	"weapon_negev;"
 	}
-	"SKPK"
+	"O.S.I.P.R."
 	{
 		"index"		"1042"
 		"classes"	"weapon_m249;"
 	}
-	"W żywe kolory"
+	"In Living Color"
 	{
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"Zdrajca"
+	"The Traitor"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Przezroczysty polimer"
+	"Clear Polymer"
 	{
 		"index"		"1039"
 		"classes"	"weapon_glock;"
 	}
-	"Aberracja chromatyczna"
+	"Chromatic Aberration"
 	{
 		"index"		"1038"
 		"classes"	"weapon_galilar;"
 	}
-	"Łańcuch pokarmowy"
+	"Food Chain"
 	{
 		"index"		"1037"
 		"classes"	"weapon_mp9;"
@@ -80,7 +80,7 @@
 		"index"		"1036"
 		"classes"	"weapon_cz75a;"
 	}
-	"Czerń"
+	"Slate"
 	{
 		"index"		"1035"
 		"classes"	"weapon_ak47;"
